# json_x

./: ._.gitignore  ._index.html.tmp  .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod  go.sum  index.html  index.html.tmp  main.go  main.py  react.html
.github/workflows/: ._release.yml  release.yml  unstable.yml  windows.yml
css/: bootstrap.min.css  style.css
data/: edges.go  json_data.go  nodes.go
js/: main.js
my-python-app_3/: .gitignore  main.py
my-python-app_4/: main.py
my-react-app/: package.json
my-react-app-2/: package.json
my-react-app-2/src/: App.css  App.jsx
my-react-app/src/: App.css  App.jsx  App.module.css  App.tmp.jsx
oh-dear-2/src/: Makefile  json_node.cpp  json_x.cpp  json_x.h  layout.cpp  layout.h  main.cpp
src/: Makefile  json_node.cpp  json_node.h  json_x.cpp  main.cpp
